--- a/list.html
+++ b/list.html
@@ -8,5 +8,20 @@
 	
 </head>
 <body class="list">
+	<header class="header head">
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+	<i class="head-in"></i></header>
+	
+	<div class="container">
+		<div class="content">
+		</div>
+		
+		<div class="sidebar">
+		</div>
+	</div>
+	
+	<footer class="footer foot">
+	</footer>
 </body>
 </html>
