--- a/list.html
+++ b/list.html
@@ -5,7 +5,7 @@
 	<script>(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
 	<title>Miedinger</title>
 	<link rel="stylesheet" href="assets/c/style.css">
-	
+	<!--[if (gte IE 6)&(lte IE 8)]><script src="assets/j/shiv.js"></script><![endif]-->
 </head>
 <body class="list">
 	<header class="header head">
