branding/site title

--- a/list.html
+++ b/list.html
@@ -9,8 +9,7 @@
 </head>
 <body class="list">
 	<header class="header head">
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
+		<p class="brand">Miedinger</p>
 	<i class="head-in"></i></header>
 	
 	<div class="container">
