link brand to home page

--- a/list.html
+++ b/list.html
@@ -9,7 +9,7 @@
 </head>
 <body class="list">
 	<header class="header head">
-		<p class="brand">Miedinger</p>
+		<p class="brand"><a href="./list.html">Miedinger</a></p>
 	<i class="head-in"></i></header>
 	
 	<div class="container">
