make the nav a nav.

--- a/list.html
+++ b/list.html
@@ -10,6 +10,15 @@
 <body class="list">
 	<header class="header head">
 		<p class="brand"><a href="./list.html">Miedinger</a></p>
+		
+		<nav class="nav menu">
+			<a href="#"><i class="ico ico-me"></i></a>
+			<a href="#"><i class="ico ico-fb"></i></a>
+			<a href="#"><i class="ico ico-tw"></i></a>
+			<a href="#"><i class="ico ico-li"></i></a>
+			<a href="#"><i class="ico ico-pi"></i></a>
+		</nav>
+		
 	<i class="head-in"></i></header>
 	
 	<div class="container">
