fork the header

--- a/list.html
+++ b/list.html
@@ -9,15 +9,17 @@
 </head>
 <body class="list">
 	<header class="header head">
-		<p class="brand"><a href="./list.html">Miedinger</a></p>
+		<div class="fork">
+			<p class="brand fork-left"><a href="./list.html">Miedinger</a></p>
 		
-		<nav class="nav menu">
-			<a href="#"><i class="ico ico-me"></i></a>
-			<a href="#"><i class="ico ico-fb"></i></a>
-			<a href="#"><i class="ico ico-tw"></i></a>
-			<a href="#"><i class="ico ico-li"></i></a>
-			<a href="#"><i class="ico ico-pi"></i></a>
-		</nav>
+			<nav class="nav menu fork-right">
+				<a href="#"><i class="ico ico-me"></i></a>
+				<a href="#"><i class="ico ico-fb"></i></a>
+				<a href="#"><i class="ico ico-tw"></i></a>
+				<a href="#"><i class="ico ico-li"></i></a>
+				<a href="#"><i class="ico ico-pi"></i></a>
+			</nav>
+		</div>
 		
 	<i class="head-in"></i></header>
 	
