--- a/list.html
+++ b/list.html
@@ -199,7 +199,7 @@
 					<a href="#"><i class="ico-small ico-comments"></i> 3 <span class="accessibility">comments</span></a>
 					<a href="#"><i class="ico-small ico-likes"></i> 3 <span class="accessibility">likes</span></a>
 					<a href="#">#tagone</a> <a href="#">#tagtwo</a> <a href="#">#tagthree</a> 
-					<a href="#"><i class="ico-small ico-reblog"></i> This is a reblog</a>
+					<a href="#"><i class="ico-small ico-source"></i> Source</a>
 				</footer>
 			</article>
 			
