--- a/list.html
+++ b/list.html
@@ -298,7 +298,16 @@
 		</div>
 	</div>
 	
+
+	<div class="adjacent fork">
+		<div class="fork-left"><a href="#" class="adjacent-left">Previous page</a></div>
+		<div class="fork-right"><a href="#" class="adjacent-right">Next page</a></div>
+		<div class="fork-center">Page 1 of 2</div>
+	</div>
 	
+	<footer class="footer foot">
+		<p class="theme-by">Theme by <a href="http://floate.com.au">Floate</a></p>
+	</footer>
 	
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
