use inner div on adjacent for border

--- a/list.html
+++ b/list.html
@@ -299,11 +299,11 @@
 	</div>
 	
 
-	<div class="adjacent fork">
+	<div class="adjacent fork"><div class="in">
 		<div class="fork-left"><a href="#" class="adjacent-left">Previous page</a></div>
 		<div class="fork-right"><a href="#" class="adjacent-right">Next page</a></div>
 		<div class="fork-center">Page 1 of 2</div>
-	</div>
+	</div></div>
 	
 	<footer class="footer foot">
 		<p class="theme-by">Theme by <a href="http://floate.com.au">Floate</a></p>
