--- a/singular.html
+++ b/singular.html
@@ -59,10 +59,10 @@
 			</article>
 			
 			
-			<div class="adjacent fork">
+			<div class="adjacent fork"><div class="in">
 				<div class="fork-left"><a href="#" class="adjacent-left">Previous post</a></div>
 				<div class="fork-right"><a href="#" class="adjacent-right">Next post</a></div>
-			</div>
+			</div></div>
 
 
 
