use tumblr server for images

--- a/search.html
+++ b/search.html
@@ -288,7 +288,7 @@
 				<div class="set set-text">
 					<label for="search-sidebar" class="accessibility">Search</label>
 				    <input type="text" name="q" id="search-sidebar" value="{SearchQuery}" class="text" />
-					<input type="image" src="assets/i/search/submit.png" class="submit" />
+					<input type="image" src="http://static.tumblr.com/4g4xfxh/4Wbm65wn1/submit.png" class="submit" />
 				</div>
 			</form>
 			
