--- a/for-tumblr.html
+++ b/for-tumblr.html
@@ -4,8 +4,7 @@
 	<meta charset=UTF-8>
 	<script>(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
 	<title>{block:SearchPage}{lang:Search results for SearchQuery} - {/block:SearchPage}{block:PostTitle}{PostTitle} - {/block:PostTitle}{Title}</title>
-	<!-- <link rel="stylesheet" href="http://static.tumblr.com/4g4xfxh/MPKm679l8/style.css"> -->
-	<link rel="stylesheet" href="http://floate.static.int.pwcc.cc/miedinger/assets/c/style.css?v=002">
+	<link rel="stylesheet" href="http://static.tumblr.com/4g4xfxh/9z1m67ig9/style.css">
 	<!--[if (gte IE 6)&(lte IE 8)]><script src="http://static.tumblr.com/4g4xfxh/nYhm65wy6/shiv.js"></script><![endif]-->
 
 
@@ -242,8 +241,7 @@ var pinterestUsername = "{text:Pinterest Username}";
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 
-	<!-- <script src="http://static.tumblr.com/4g4xfxh/Uiim65wym/site.js" type="text/javascript"></script> -->
-	<script src="http://floate.static.int.pwcc.cc/miedinger/assets/j/site.js?v=002" type="text/javascript"></script>
+	<script src="http://static.tumblr.com/4g4xfxh/ZmFm67ihd/site-min.js" type="text/javascript"></script>
 	{block:Twitter}<script type="text/javascript" src="/tweets.js"></script>{/block:Twitter}
 
 
